--- a/ZIPCORD/ZIPCORD.vcxproj.filters
+++ b/ZIPCORD/ZIPCORD.vcxproj.filters
@@ -155,6 +155,9 @@
     <ClInclude Include="BD.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="colors.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="libcurl.lib">
